Line wrap in List views, add entered value to List Item, bugfix: show Person Details on click

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,1 +1,7 @@
-.ui-controlgroup-horizontal .ui-controlgroup-controls { display: block !important; }
+.ui-controlgroup-horizontal .ui-controlgroup-controls {
+	display: block !important; 
+}
+
+.ui-listview>.ui-li-static, .ui-listview>.ui-li-divider {
+    white-space : normal !important;
+}
